--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Questions?</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <p><a href="mailto:sam@spinyc.com">sam@spinyc.com</a></p>
                     </div>
                 </div>
             </div>
