Saving correct content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,13 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#form">Form</a>
                     </li>
                 </ul>
             </div>
@@ -43,7 +37,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Bookers | Please use this form for each night you book. It will be submitted to Sam's email for calendar posting and relaying to our sound techs.</span>
                     </div>
                 </div>
             </div>
@@ -54,4 +48,3 @@
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
-`
