--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
-                    <hr class="star-primary">
+                    <h2>Booking Form</h2>
+                    <hr class="line">
                 </div>
             </div>
             <div class="row">
@@ -14,29 +14,59 @@
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Contact Email</label>
+                                <input type="email" class="form-control" placeholder="Contact email" id="email_address" required data-validation-required-message="Please enter your email so we can be in touch with any questions.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Date</label>
+                                <input type="date" class="form-control" placeholder="Date" id="date" required data-validation-required-message="Please enter the date of the booking.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <label>Band 1</label>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Set Time</label>
+                                <input type="time" class="form-control" placeholder="Set Time" id="set_time" required data-validation-required-message="Please enter the set time.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your band's name.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <label>Website or Facebook page</label>
+                                <input type="text" class="form-control" placeholder="Website or Facebook page (Facebook preferred)" id="website" required data-validation-required-message="Please enter your website or Facebook page.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <label>Tech Specs (incl. # of people performing)</label>
+                                <textarea rows="3" class="form-control" placeholder="Tech specs: include total number of people performing (ex.: 5 people total; 2 guitars, bass, drums, keys; bass and keys get vocal mics)" id="tech_specs" required data-validation-required-message="Please enter your tech specs."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        Optional: 
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Advance Ticketing Page</label>
+                                <input type="text" class="form-control" placeholder="Advance Ticketing Page" id="ticket_page">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <label>Facebook Page for Event</label>
+                                <input type="text" class="form-control" placeholder="Facebook Page For Event" id="event_page">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
