--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,19 +6,28 @@
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>
-                            {% for adress in site.address %}
-                                {{ adress.line }} <br>
-		                    {% endfor %}
+                                48 E 23rd St <br>
+                            
+                                New York, NY 10010 <br>
+                            
                         </p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Connect</h3>
                         <ul class="list-inline">
-                            {% for network in site.social %}
                             <li>
-                                <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
+                                <a href="https://www.facebook.com/SPiNNewYork" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
-		                    {% endfor %}
+
+                            <li>
+                                <a href="https://twitter.com/spinpong" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+
+                            <li>
+                                <a href="http://instagram.com/spinnewyork" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+                            </li>
+
+                            
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
@@ -32,13 +41,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; {{ site.title }} 20{{ site.time | date: '%y' }}
+                        Copyright &copy; Freelancer 2014
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
+    
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll visible-xs visble-sm">
         <a class="btn btn-primary" href="#page-top">
