--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,10 +33,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
-                        <hr class="star-light">
+                        <hr class="line">
                         <span class="skills">Bookers | Please use this form for each night you book. It will be submitted to Sam's email for calendar posting and relaying to our sound techs.</span>
                     </div>
                 </div>
