Added location link to google maps

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,27 +13,27 @@
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
 
                     <!-- http://forms.brace.io/ -->
-                    <form method="POST" action="http://forms.brace.io/trisha.hadley@gmail.com">
+                    <form action="http://forms.brace.io/trisha.hadley@gmail.com">
 
                     <!-- <form name="sentMessage" id="contactForm" novalidate> -->
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Contact Email</label>
-                                <input type="email" class="form-control" placeholder="Contact email" name="_replyto" required data-validation-required-message="Please enter your email so we can be in touch with any questions.">
+                                <input type="email" class="form-control" placeholder="Contact email" id="Contact Email" name="_replyto" required data-validation-required-message="Please enter your email so we can be in touch with any questions.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
-                        <div class="row control-group">
+<!--                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Date</label>
-                                <input type="date" class="form-control" placeholder="Date" name="date" required data-validation-required-message="Please enter the date of the booking.">
+                                <input type="date" class="form-control" placeholder="Date" id="Date" name="date" required data-validation-required-message="Please enter the date of the booking.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Submit a 500x500 image for posting to our calendar. (We can only use one image per show.) Image file (must be 500x500 pixels):</label>
-                                <input type="file" class="form-control" name="uploaded_file" required data-validation-required-message="Please attach a 500x500 image.">
+                                <label>Image</label>
+                                <input type="file" class="form-control" name="uploaded_file" id="Image" required data-validation-required-message="Please attach a 500x500 image.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -41,28 +41,28 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Set Time</label>
-                                <input type="time" class="form-control" placeholder="Set Time" name="set_time" required data-validation-required-message="Please enter the set time.">
+                                <input type="time" class="form-control" placeholder="Set Time" id= "Set Time" name="set_time" required data-validation-required-message="Please enter the set time.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" name="name" required data-validation-required-message="Please enter your band's name.">
+                                <input type="text" class="form-control" placeholder="Name" id="Name" name="name" required data-validation-required-message="Please enter your band's name.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Website or Facebook page</label>
-                                <input type="text" class="form-control" placeholder="Website or Facebook page (Facebook preferred)" name="website" required data-validation-required-message="Please enter your website or Facebook page.">
+                                <input type="text" class="form-control" placeholder="Website or Facebook page (Facebook preferred)" name="website" id="Website or Facebook page" required data-validation-required-message="Please enter your website or Facebook page.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Tech Specs (incl. # of people performing)</label>
-                                <textarea rows="3" class="form-control" placeholder="Tech specs: include total number of people performing (ex.: 5 people total; 2 guitars, bass, drums, keys; bass and keys get vocal mics)" name="tech_specs" required data-validation-required-message="Please enter your tech specs."></textarea>
+                                <label>Tech Specs</label>
+                                <textarea rows="3" class="form-control" placeholder="Tech specs: include total number of people performing (ex.: 5 people total; 2 guitars, bass, drums, keys; bass and keys get vocal mics)" name="tech_specs" id="Tech Specs" required data-validation-required-message="Please enter your tech specs."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -70,17 +70,17 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Advance Ticketing Page</label>
-                                <input type="text" class="form-control" placeholder="Advance Ticketing Page" name="ticket_page">
+                                <input type="text" class="form-control" placeholder="Advance Ticketing Page" name="ticket_page" id="Advance Ticketing Page">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Facebook Page for Event</label>
-                                <input type="text" class="form-control" placeholder="Facebook Page For Event" name="event_page">
+                                <input type="text" class="form-control" placeholder="Facebook Page For Event" name="event_page" id="Facebook Page for Event">
                                 <p class="help-block text-danger"></p>
                             </div>
-                        </div>
+                        </div> -->
                         <br>
                         <div id="success"></div>
                         <div class="row">
