--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>
+                        <h3>Location</h3> 
+                        <p><a href="https://www.google.com/maps/place/SPiN+New+York/@40.738354,-73.9820327,15z/data=!4m5!1m2!2m1!1sSPiN+New+York,+East+23rd+Street,+New+York,+NY!3m1!1s0x89c259a137388d01:0xf0879ba78872713c" target="_blank">
                                 48 E 23rd St <br>
                             
-                                New York, NY 10010 <br>
+                                New York, NY 10010 <br></a>
                             
                         </p>
                     </div>
